[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yopenstack-client"
dependencies= ["python-openstackclient==6.3.0","rich==13.6.0","python-neutronclient==6.7.0"]
version = "0.0.3"
authors = [
  { name="Ananda Dwi Prayoga", email="anandabiru04@gmail.com" },
]
description = "Openstack client custom package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

[project.scripts]
yopenstack = "yopenstackclient.cli:main"
